re-applied collapsing navbar & fixed navbar txt color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,12 @@ html {
 
 .logo {
     font-size: 2.25rem;
-    color: white;
     background-color: #4aaaa5;
+    color: white;
+}
+
+.navbar-light .navbar-brand {
+    color: white;
 }
 
 body {
